更新了最近的代码，包括优时通的笔试，华为的机考等。

--- a/Draft/d3.ipynb
+++ b/Draft/d3.ipynb
@@ -2,66 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-11T08:19:30.576335Z",
-     "start_time": "2024-05-11T08:19:30.571820Z"
+     "end_time": "2024-09-08T04:32:06.272863Z",
+     "start_time": "2024-09-08T04:32:06.266928Z"
     }
    },
-   "outputs": [],
    "source": [
-    "from sympy import *\n",
-    "x = Symbol('x')"
-   ]
-  },
-  {
-   "cell_type": "code",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 定义主函数，使用 for 循环计算每一列不为零单元格的索引值方差\n",
+    "def calculate_variance_with_loop(df):\n",
+    "    variance_results = {}\n",
+    "    for column in df.columns:\n",
+    "        # 获取当前列\n",
+    "        non_zero_indices = df[column][df[column] != 0].index\n",
+    "        # 如果不为零的单元格少于两个，方差为0\n",
+    "        if len(non_zero_indices) < 2:\n",
+    "            variance_results[column] = 0\n",
+    "        else:\n",
+    "            # 计算索引的方差\n",
+    "            variance_results[column] = np.var(non_zero_indices)\n",
+    "    # 将结果转化为一个 pandas Series\n",
+    "    return pd.Series(variance_results).sum()\n",
+    "\n",
+    "# 示例 DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'A': [0, 1, 0, 3, 0, 5, 0],\n",
+    "    'B': [2, 0, 0, 4, 0, 6, 0],\n",
+    "    'C': [0, 0, 0, 0, 0, 0, 0]  # 全零列，方差应为0\n",
+    "})\n",
+    "\n",
+    "# 计算并输出结果\n",
+    "variance_result = calculate_variance_with_loop(df)\n",
+    "print(variance_result)\n"
+   ],
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mOSError\u001B[0m                                   Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[27], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mintegrate\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m2\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mx\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\OneDrive\\Document\\Spell\\venv\\Lib\\site-packages\\sympy\\integrals\\integrals.py:1567\u001B[0m, in \u001B[0;36mintegrate\u001B[1;34m(meijerg, conds, risch, heurisch, manual, *args, **kwargs)\u001B[0m\n",
-      "File \u001B[1;32m~\\OneDrive\\Document\\Spell\\venv\\Lib\\site-packages\\sympy\\integrals\\integrals.py:612\u001B[0m, in \u001B[0;36mdoit\u001B[1;34m(self, **hints)\u001B[0m\n",
-      "File \u001B[1;32m~\\OneDrive\\Document\\Spell\\venv\\Lib\\site-packages\\sympy\\integrals\\integrals.py:908\u001B[0m, in \u001B[0;36m_eval_integral\u001B[1;34m(self, f, x, meijerg, risch, manual, heurisch, conds, final)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap>:1360\u001B[0m, in \u001B[0;36m_find_and_load\u001B[1;34m(name, import_)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap>:1331\u001B[0m, in \u001B[0;36m_find_and_load_unlocked\u001B[1;34m(name, import_)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap>:935\u001B[0m, in \u001B[0;36m_load_unlocked\u001B[1;34m(spec)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap_external>:990\u001B[0m, in \u001B[0;36mexec_module\u001B[1;34m(self, module)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap_external>:1127\u001B[0m, in \u001B[0;36mget_code\u001B[1;34m(self, fullname)\u001B[0m\n",
-      "File \u001B[1;32m<frozen importlib._bootstrap_external>:1186\u001B[0m, in \u001B[0;36mget_data\u001B[1;34m(self, path)\u001B[0m\n",
-      "\u001B[1;31mOSError\u001B[0m: [Errno 22] Invalid argument"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.888888888888889\n"
      ]
     }
    ],
-   "source": [
-    "integrate(x**2 + x + 1, x)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-11T08:19:42.895617Z",
-     "start_time": "2024-05-11T08:19:42.871686Z"
-    }
-   },
-   "id": "8a6c5acd15852af9",
-   "execution_count": 27
+   "execution_count": 4
   },
   {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2024-09-08T04:30:27.293966Z",
+     "start_time": "2024-09-08T04:30:27.273203Z"
+    }
    },
-   "id": "c6713aa99d8328ab"
+   "cell_type": "code",
+   "source": "np.var([0,3,5])",
+   "id": "8204d246582c1ee3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.222222222222222"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
