--- a/Draft/d1.ipynb
+++ b/Draft/d1.ipynb
@@ -3,121 +3,259 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T08:31:59.371430Z",
-     "start_time": "2024-05-26T08:31:59.357349Z"
+     "end_time": "2024-09-20T05:09:39.302832Z",
+     "start_time": "2024-09-20T05:09:35.099698Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "\n",
-    "# 假设df是你的DataFrame\n",
-    "df = pd.DataFrame()\n",
-    "df.loc[1,'A'] = 1\n",
+    "# 创建数据集\n",
+    "x_train = torch.tensor([[1.0], [2.0], [3.0], [4.0]], dtype=torch.float32)\n",
+    "y_train = torch.tensor([[2.0], [4.0], [6.0], [8.0]], dtype=torch.float32)\n",
     "\n",
-    "# 使用iterrows()函数遍历df的每一行\n",
-    "for index, row in df.iterrows():\n",
-    "    print(type(index))"
+    "# 定义线性回归模型\n",
+    "class LinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(LinearRegressionModel, self).__init__()\n",
+    "        self.linear = nn.Linear(1, 1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)\n",
+    "\n",
+    "model = LinearRegressionModel()\n",
+    "\n",
+    "# 定义损失函数和优化器\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "\n",
+    "# 训练模型\n",
+    "num_epochs = 1000\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    \n",
+    "    # 前向传播\n",
+    "    outputs = model(x_train)\n",
+    "    loss = criterion(outputs, y_train)\n",
+    "    \n",
+    "    # 反向传播和优化\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    if (epoch+1) % 100 == 0:\n",
+    "        print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
+    "\n",
+    "# 打印训练结果\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    predicted = model(x_train).detach().numpy()\n",
+    "    print(f'Predicted values: {predicted}')"
    ],
-   "id": "32fdf95296eeb724",
+   "id": "1ffff3a2e346fc4b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n"
+      "Epoch [100/1000], Loss: 0.0069\n",
+      "Epoch [200/1000], Loss: 0.0038\n",
+      "Epoch [300/1000], Loss: 0.0021\n",
+      "Epoch [400/1000], Loss: 0.0011\n",
+      "Epoch [500/1000], Loss: 0.0006\n",
+      "Epoch [600/1000], Loss: 0.0003\n",
+      "Epoch [700/1000], Loss: 0.0002\n",
+      "Epoch [800/1000], Loss: 0.0001\n",
+      "Epoch [900/1000], Loss: 0.0001\n",
+      "Epoch [1000/1000], Loss: 0.0000\n",
+      "Predicted values: [[2.009024 ]\n",
+      " [4.0043726]\n",
+      " [5.999721 ]\n",
+      " [7.99507  ]]\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T08:34:36.047971Z",
-     "start_time": "2024-05-26T08:34:36.043868Z"
+     "end_time": "2024-09-20T05:09:39.307894Z",
+     "start_time": "2024-09-20T05:09:39.302832Z"
     }
    },
    "cell_type": "code",
-   "source": "range(49)",
-   "id": "4dcefa7b3db74c8d",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(0, 49)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n"
    ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-26T08:32:51.449271Z",
-     "start_time": "2024-05-26T08:32:51.444289Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df",
-   "id": "c2f33e51625f7c3d",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     A\n",
-       "0  1.0"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 17
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "id": "e365c9a826fc961c",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "1ffff3a2e346fc4b"
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T05:09:40.195008Z",
+     "start_time": "2024-09-20T05:09:39.307894Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pip list",
+   "id": "51505eaf86f3fc34",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- --------------\n",
+      "anyio                     4.3.0\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asttokens                 2.4.1\n",
+      "async-lru                 2.0.4\n",
+      "attrs                     23.2.0\n",
+      "Babel                     2.15.0\n",
+      "basemap                   1.4.1\n",
+      "basemap-data              1.3.2\n",
+      "beautifulsoup4            4.12.3\n",
+      "bleach                    6.1.0\n",
+      "branca                    0.7.2\n",
+      "certifi                   2024.2.2\n",
+      "cffi                      1.16.0\n",
+      "charset-normalizer        3.3.2\n",
+      "colorama                  0.4.6\n",
+      "comm                      0.2.2\n",
+      "contourpy                 1.2.1\n",
+      "cycler                    0.12.1\n",
+      "debugpy                   1.8.1\n",
+      "decorator                 5.1.1\n",
+      "defusedxml                0.7.1\n",
+      "et-xmlfile                1.1.0\n",
+      "executing                 2.0.1\n",
+      "fastjsonschema            2.19.1\n",
+      "filelock                  3.15.4\n",
+      "folium                    0.16.0\n",
+      "fonttools                 4.52.1\n",
+      "fqdn                      1.5.1\n",
+      "fsspec                    2024.6.1\n",
+      "gurobipy                  11.0.3\n",
+      "h11                       0.14.0\n",
+      "httpcore                  1.0.5\n",
+      "httpx                     0.27.0\n",
+      "idna                      3.7\n",
+      "ipykernel                 6.29.5\n",
+      "ipython                   8.26.0\n",
+      "ipywidgets                8.1.3\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.4\n",
+      "joblib                    1.4.2\n",
+      "json5                     0.9.25\n",
+      "jsonpointer               2.4\n",
+      "jsonschema                4.22.0\n",
+      "jsonschema-specifications 2023.12.1\n",
+      "jupyter                   1.0.0\n",
+      "jupyter_client            8.6.2\n",
+      "jupyter-console           6.6.3\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.10.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.14.2\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.2.1\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.27.3\n",
+      "jupyterlab_widgets        3.0.11\n",
+      "kiwisolver                1.4.5\n",
+      "MarkupSafe                2.1.5\n",
+      "matplotlib                3.9.2\n",
+      "matplotlib-inline         0.1.7\n",
+      "mistune                   3.0.2\n",
+      "mpmath                    1.3.0\n",
+      "nbclient                  0.10.0\n",
+      "nbconvert                 7.16.4\n",
+      "nbformat                  5.10.4\n",
+      "nest-asyncio              1.6.0\n",
+      "networkx                  3.3\n",
+      "notebook                  7.2.0\n",
+      "notebook_shim             0.2.4\n",
+      "numpy                     1.26.4\n",
+      "openpyxl                  3.1.5\n",
+      "overrides                 7.7.0\n",
+      "packaging                 23.2\n",
+      "pandas                    2.2.2\n",
+      "pandocfilters             1.5.1\n",
+      "parso                     0.8.4\n",
+      "patsy                     0.5.6\n",
+      "pillow                    10.3.0\n",
+      "pip                       24.2\n",
+      "platformdirs              4.2.2\n",
+      "prometheus_client         0.20.0\n",
+      "prompt-toolkit            3.0.43\n",
+      "psutil                    5.9.8\n",
+      "pure-eval                 0.2.2\n",
+      "pycparser                 2.22\n",
+      "Pygments                  2.18.0\n",
+      "pyparsing                 3.1.2\n",
+      "pyproj                    3.6.1\n",
+      "pyshp                     2.3.1\n",
+      "python-dateutil           2.9.0.post0\n",
+      "python-json-logger        2.0.7\n",
+      "pytz                      2024.1\n",
+      "pywin32                   306\n",
+      "pywinpty                  2.0.13\n",
+      "PyYAML                    6.0.1\n",
+      "pyzmq                     26.0.3\n",
+      "qtconsole                 5.5.2\n",
+      "QtPy                      2.4.1\n",
+      "referencing               0.35.1\n",
+      "requests                  2.32.2\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rpds-py                   0.18.1\n",
+      "scikit-learn              1.5.0\n",
+      "scipy                     1.13.1\n",
+      "seaborn                   0.13.2\n",
+      "Send2Trash                1.8.3\n",
+      "setuptools                72.2.0\n",
+      "simpy                     4.1.1\n",
+      "six                       1.16.0\n",
+      "sniffio                   1.3.1\n",
+      "soupsieve                 2.5\n",
+      "stack-data                0.6.3\n",
+      "statsmodels               0.14.2\n",
+      "sympy                     1.12\n",
+      "terminado                 0.18.1\n",
+      "threadpoolctl             3.5.0\n",
+      "tinycss2                  1.3.0\n",
+      "torch                     2.4.0\n",
+      "torchaudio                2.4.0\n",
+      "torchvision               0.19.0\n",
+      "tornado                   6.4\n",
+      "traitlets                 5.14.3\n",
+      "types-python-dateutil     2.9.0.20240316\n",
+      "typing_extensions         4.12.2\n",
+      "tzdata                    2024.1\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.2.1\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 1.13\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.8.0\n",
+      "widgetsnbextension        4.0.11\n",
+      "xyzservices               2024.4.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
